[gd_scene load_steps=2 format=3 uid="uid://d2sqrwkc4e5pc"]

[ext_resource type="Script" path="res://scripts/chronicles/chronicles.gd" id="1_chronicles"]

[node name="Chronicles" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chronicles")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="Button" parent="VBoxContainer/TopBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "← Exit"

[node name="WorldNameLabel" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 24
text = "Chronicles: World Name"
vertical_alignment = 1

[node name="RefreshButton" type="Button" parent="VBoxContainer/TopBar"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "↻ Refresh"

[node name="MainContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 600

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/MainContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NPCs" type="Control" parent="VBoxContainer/MainContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/TabContainer/NPCs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NPCsList" type="VBoxContainer" parent="VBoxContainer/MainContainer/TabContainer/NPCs/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Locations" type="Control" parent="VBoxContainer/MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/TabContainer/Locations"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LocationsList" type="VBoxContainer" parent="VBoxContainer/MainContainer/TabContainer/Locations/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Organizations" type="Control" parent="VBoxContainer/MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/TabContainer/Organizations"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OrgsList" type="VBoxContainer" parent="VBoxContainer/MainContainer/TabContainer/Organizations/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Events" type="Control" parent="VBoxContainer/MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/TabContainer/Events"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EventsList" type="VBoxContainer" parent="VBoxContainer/MainContainer/TabContainer/Events/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Statistics" type="Control" parent="VBoxContainer/MainContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/TabContainer/Statistics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsList" type="VBoxContainer" parent="VBoxContainer/MainContainer/TabContainer/Statistics/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="DetailPanel" type="PanelContainer" parent="VBoxContainer/MainContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainContainer/DetailPanel"]
layout_mode = 2

[node name="DetailContent" type="VBoxContainer" parent="VBoxContainer/MainContainer/DetailPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

